--- a/src/styles/newCeShi.scss
+++ b/src/styles/newCeShi.scss
@@ -1,3 +1,7 @@
-body{
-    background-color: blue;
+h1{
+    width:200px;
+    margin: 0 auto;
+    color:red;
+    border:1px solid black;
+    text-align: center;
 }
